src/test/ui/bad/bad-expr-lhs.stderr
error[E0070]: invalid left-hand side of assignment
  --> $DIR/bad-expr-lhs.rs:2:7
   |
LL |     1 = 2;
   |     - ^
   |     |
   |     cannot assign to this expression

error[E0067]: invalid left-hand side of assignment
  --> $DIR/bad-expr-lhs.rs:3:7
   |
LL |     1 += 2;
   |     - ^^
   |     |
   |     cannot assign to this expression

error[E0070]: invalid left-hand side of assignment
  --> $DIR/bad-expr-lhs.rs:4:12
   |
LL |     (1, 2) = (3, 4);
   |     ------ ^
   |     |
   |     cannot assign to this expression

error[E0070]: invalid left-hand side of assignment
  --> $DIR/bad-expr-lhs.rs:7:12
   |
LL |     (a, b) = (3, 4);
   |     ------ ^
   |     |
   |     cannot assign to this expression
   |
   = note: destructuring assignments are not currently supported
   = note: for more information, see https://github.com/rust-lang/rfcs/issues/372

error[E0070]: invalid left-hand side of assignment
  --> $DIR/bad-expr-lhs.rs:9:10
   |
LL |     None = Some(3);
   |     ---- ^
   |     |
   |     cannot assign to this expression

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0067, E0070.
For more information about an error, try `rustc --explain E0067`.
